--- a/themes/PAFF/less/bootstrap/variables.less
+++ b/themes/PAFF/less/bootstrap/variables.less
@@ -14,21 +14,21 @@
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-blocks:          #6ea797;
-@brand-primary:         #003727; // #337ab7
+@brand-blocks:          #ea1d25;
+@brand-primary:         #358089; // #337ab7
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 @brand-bg:              #aabcb3;
-@brand-border:          #f4b2b4;
-@brand-nesto:           #3b856b;
+@brand-border:          #000;
+@brand-nesto:           #358089;
 @brand-news:            #6d69a8;
 @brand-event:           #04b6d6;
 @brand-location:        #ee9725;
 @brand-film:            #42bf9b;
 @brand-svetla:          #ed5ca7;
-@brand-rani-radovi:     #e71d23;
+@brand-rani-radovi:     #ea1d25;
 
 //== Scaffolding
 //
@@ -383,7 +383,7 @@
 @navbar-default-link-color:                #fff;
 @navbar-default-link-hover-color:          #6ea797;
 @navbar-default-link-hover-bg:             transparent;
-@navbar-default-link-active-color:         #15322a;
+@navbar-default-link-active-color:         #fff;
 @navbar-default-link-active-bg:            @brand-blocks;
 @navbar-default-link-disabled-color:       #ccc;
 @navbar-default-link-disabled-bg:          transparent;
@@ -771,7 +771,8 @@
 //
 //##
 
-@well-bg:                     @brand-blocks;
+@well-bg:                     #000;
+@sidebar-well-color:          @brand-blocks;
 
 
 
