--- a/themes/PAFF/less/overrides.less
+++ b/themes/PAFF/less/overrides.less
@@ -66,3 +66,12 @@ p:last-child,
     margin-top: 0;
   }
 }
+
+
+a{
+  transition: color .2s ease;
+  &:hover,
+  &:focus{
+    outline: none;
+  }
+}
