--- a/themes/PAFF/less/regions/header.less
+++ b/themes/PAFF/less/regions/header.less
@@ -3,7 +3,7 @@
 }
 .path-frontpage .region-header {
   .slick-track {
-    padding-top: 60px;
+    padding-top: 15px;
   }
   border-bottom: 3px solid;
   padding-bottom: 15px;
@@ -16,7 +16,7 @@
   }
 }
 .background-img {
-  background-image: url('../images/hero-transparent.jpg');
+  background-image: url('../images/jumbo-02.svg');
   background-size: cover;
 }
 .path-frontpage .main-container {
