--- a/themes/PAFF/templates/page.html.twig
+++ b/themes/PAFF/templates/page.html.twig
@@ -65,7 +65,7 @@
       </div>
       <div class="pull-right">
         <div class="in-block">
-          <h2 class="date">07.-11. September, 2016.</h2>
+          <h2 class="date">06.-10. September,  {{ "now"|date("Y") }}.</h2>
         </div>
         <div class="in-block social">
           <a href="https://www.facebook.com/pancevofilmfestival"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
