--- a/themes/PAFF/less/regions/content.less
+++ b/themes/PAFF/less/regions/content.less
@@ -39,8 +39,7 @@
       display:block;
       position: absolute;
       width: 100%;
-      top: 50%;
-      transform: translateY(-50%);
+      bottom: 0;
       padding: 0 10px;
       text-align: center;
       font-size: 22px;
@@ -49,6 +48,8 @@
       z-index: 5;
       font-size: 15px;
       text-transform: uppercase;
+      background-color: rgba(0, 0, 0, 0.72);
+      display: block;
       a{
         color: white;
         &:before{
