--- a/themes/PAFF/less/overrides.less
+++ b/themes/PAFF/less/overrides.less
@@ -75,3 +75,16 @@ a{
     outline: none;
   }
 }
+
+
+
+// fix for news
+@media (min-width: @screen-sm-min) {
+.view-news{
+  .news-margin {
+    .content > div{
+      display: flex;
+    }
+  }
+}
+}
