--- a/themes/PAFF/less/pages/news.less
+++ b/themes/PAFF/less/pages/news.less
@@ -1,1 +1,10 @@
 
+.path-news{
+  .view-display-id-page_1{
+    .teaser{
+      border-top: 1px solid black;
+      padding-top: 20px;
+      margin-top: 20px;
+    }
+  }
+}
